social Add timelinev2 support to SocialReader